--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head>	
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
 	 <p>Hello world!!!</p>
