--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 	 <p>Hello world!!!</p>
 	 <progress max='10'></progress>
+	 <input type='email' placeholder='user@domain.com' required> 
 </body>
 </html>
