--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 	 <p>Hello world!!!</p>
 	 <progress max='10'></progress>
+	 Username:<input type='text'><br/>
+	 Password:<input type='password'><br/>
 	 <input type='email' placeholder='user@domain.com' required> 
 </body>
 </html>
