--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 	 <p>Hello world!!!</p>
-	 <progress max='10'></progress>
-	 Username:<input type='text'><br/>
-	 Password:<input type='password'><br/>
-	 <input type='email' placeholder='user@domain.com' required> 
+	 <progress max='10'></progress></br>
+	 <span>Username:</span><input type='text' value='user'><br/>
+	 <span>Password:</span><input type='password' value='pass'word'><br/>
+	 <span>Email:</span><input type='email' placeholder='user@domain.com' required> 
 </body>
 </html>
