--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
 <body>
 	 <p>Hello world!!!</p>
 	 <progress max='10'></progress></br>
-	 <span>Username:</span><input type='text' value='user'><br/>
-	 <span>Password:</span><input type='password' value='pass'word'><br/>
-	 <span>Email:</span><input type='email' placeholder='user@domain.com' required> 
+	 <table>
+	 	<td>
+	 		<tr>Username:</tr>
+	 		<tr><input type='text' value='user'></tr>
+	 	</td>
+	 	<td>
+	 		<tr>Password:</tr>
+	 		<tr><input type='password' value='password'></tr>
+	 	</td>
+	 	<td>
+	 		<tr>Email:</tr>
+	 		<tr><input type='email' placeholder='user@domain.com' required> </tr>
+	 	</td>
+	 </table>
 </body>
 </html>
