--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 	 <p>Hello world!!!</p>
 	 <progress max='10'></progress></br>
 	 <table>
-	 	<td>
-	 		<tr>Username:</tr>
-	 		<tr><input type='text' value='user'></tr>
-	 	</td>
-	 	<td>
-	 		<tr>Password:</tr>
-	 		<tr><input type='password' value='password'></tr>
-	 	</td>
-	 	<td>
-	 		<tr>Email:</tr>
-	 		<tr><input type='email' placeholder='user@domain.com' required> </tr>
-	 	</td>
+	 	<tr>
+	 		<td>Username:</td>
+	 		<td><input type='text' value='user'></td>
+	 	</tr>
+	 	<tr>
+	 		<td>Password:</tr>
+	 		<td><input type='password' value='password'></td>
+	 	</tr>
+	 	<tr>
+	 		<td>Email:</tr>
+	 		<td><input type='email' placeholder='user@domain.com' required> </td>
+	 	</tr>
 	 </table>
+	 <input type='submit'>
 </body>
 </html>
