--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 	 		<td><input type='email' placeholder='user@domain.com' required> </td>
 	 	</tr>
 	 </table>
-	 <input type='submit'>
+	 <input type='submit' value='Press'>
 </body>
 </html>
