--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	 		<td><input type='text' value='user'></td>
 	 	</tr>
 	 	<tr>
-	 		<td>Password:</tr>
+	 		<td>Password:</td>
 	 		<td><input type='password' value='password'></td>
 	 	</tr>
 	 	<tr>
-	 		<td>Email:</tr>
+	 		<td>Email:</td>
 	 		<td><input type='email' placeholder='user@domain.com' required> </td>
 	 	</tr>
 	 </table>
