--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 	 		<td><input type='email' placeholder='user@domain.com' required> </td>
 	 	</tr>
 	 </table>
-	 <input type='submit' value='Press'>
+	 <input type='submit' value='Login'>
 </body>
 </html>
