--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	 		<td><input type='email' placeholder='user@domain.com' required> </td>
 	 	</tr>
 	 </table>
-	 <input type='submit' value='Login'>
+	 <input type='submit' value='Login' id='Submit'>
 	 <script src="myscripts.js"></script> 
 </body>
 </html>
