--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>	
 	<link rel="stylesheet" type="text/css" href="index.css">
-	<script src="myscripts.js"></script> 
+	<script src="index.js"></script> 
 </head>
 <body>
 	 <table>
