--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	 		<td><input type='email' placeholder='user@domain.com' required> </td>
 	 	</tr>
 	 </table>
-	 <input type='submit' value='Login' id='Submit'>
+	 <input type='submit' value='Login' id='btnSubmit'>
  	 <script src="index.js"></script>
 </body>
 </html>
